# FPCC

./: .gitignore  Makefile  README.md  fpcc_output.json  fpcc_test.py  log  traceError42.py
DiRect/: CMakeLists.txt  Makefile
atomfiles/: atomic_test.py  gslSolver.cpp  oracleMpmath.py
data/: correlation_in.json  correlation_in_77_78.json  correlation_in_se_expand_1ulp.json  correlation_out.json  correlation_out_77_78.json  correlation_out_se_expand_1ulp.json  correlation_out_sp_full.json  targetExample.bininst  targetExample.callinst  targetExample.cmpinst  targetExample.debuginfo
docker/: Dockerfile
eftTest/gslbench/: Makefile  efttest.c  env.sh  fpinterface.h  functions.txt  gslsflib.bc  mathFunc.txt  mypath.sh  run.sh
eftTest/llvm_pass/: CMakeLists.txt  env.sh
eftTest/runtime/: handleReal.cpp  handleReal.cpp.ori  handleReal.h
fpgenBench/bench/: Makefile  envall.sh  forbid.txt  fpgenBench.c  functions.txt  mathFunc.txt  mypath.sh  output2.csv  run.sh  test.sh
fpgenBench/llvm_pass/: CMakeLists.txt
fpgenBench/llvm_pass/FPCCSan/: CMakeLists.txt  FPCCSanitizer.cpp  FPCCSanitizer.h
gsl-2.5/: Makefile  config.status  gsl-histogram  gsl-randist  libgsl.la  libtool
misc/: compile-gsl-sf.sh
result_analysis/: .gitignore  base.py  errorTraceAna.py  localErr.xls  res_table_FPCC.xls  res_table_FPCC_NoErr.xls  results_analysis.py
script/: oracleMpmath.py
src/: communicator.h  fpInterface.h  gslSolver.cpp  handlers.cpp  opcode.h  passModule.cpp  target.h  targetExample.c
src copy/: fpInterface.h  fpUtil.cpp  fpUtil.h  gslSolver.cpp  targetExample.c
(+1296 files in other folders)
